# structValidator

./: 111.txt  CMakeLists.txt  keywords.txt  main.cpp  test.cpp
collections/: SimpleStringVector.cpp  SimpleStringVector.h
files/: FileReader.cpp  FileReader.h
handlers/: ErrorHandler.cpp  ErrorHandler.h  StructDefineValidator.cpp  StructDefineValidator.h  Validator.cpp  Validator.h
holders/: KeyWordsArray.cpp  KeyWordsArray.h
strings/: StringUtil.cpp  StringUtil.h
